[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/pngwave.png" type="Texture" id=1]
[ext_resource path="res://fonts/kenney_mini_square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://5eba9a49ae6b7.png" type="Texture" id=3]
[ext_resource path="res://scripts/guide.gd" type="Script" id=5]
[ext_resource path="res://robotTheme.tres" type="Theme" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 1.64972
margin_top = -0.824829
margin_right = 801.65
margin_bottom = 799.175
color = Color( 0.113725, 0.717647, 0.729412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pngwave" type="Sprite" parent="."]
position = Vector2( 399.031, 598.087 )
scale = Vector2( 0.759957, 0.706913 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 275.0
margin_top = 150.0
margin_right = 575.0
margin_bottom = 400.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DETAIL" type="Button" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 300.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "different from normal chess"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PAWN" type="Button" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 300.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "PAWN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KNIGHT" type="Button" parent="VBoxContainer"]
margin_top = 82.0
margin_right = 300.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 1 )
text = "KNIGHT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BISHOP" type="Button" parent="VBoxContainer"]
margin_top = 112.0
margin_right = 300.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 1 )
text = "BISHOP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ROOK" type="Button" parent="VBoxContainer"]
margin_top = 142.0
margin_right = 300.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 1 )
text = "ROOK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QUEEN" type="Button" parent="VBoxContainer"]
margin_top = 172.0
margin_right = 300.0
margin_bottom = 198.0
custom_fonts/font = SubResource( 1 )
text = "KING"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KING" type="Button" parent="VBoxContainer"]
margin_top = 202.0
margin_right = 300.0
margin_bottom = 228.0
custom_fonts/font = SubResource( 1 )
text = "QUEEN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="guidePhoto" type="Sprite" parent="."]
visible = false
position = Vector2( 2.64697, -1.647 )
scale = Vector2( 0.5, 0.5 )
centered = false

[node name="back" type="TextureButton" parent="."]
margin_left = 35.4319
margin_top = 30.6438
margin_right = 6283.43
margin_bottom = 2470.64
rect_scale = Vector2( 0.01, 0.01 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupDialog" type="PopupDialog" parent="."]
margin_left = 275.0
margin_top = 150.0
margin_right = 575.0
margin_bottom = 400.0

[node name="ColorRect" type="ColorRect" parent="PopupDialog"]
margin_right = 300.0
margin_bottom = 50.0

[node name="detail" type="Label" parent="PopupDialog"]
margin_right = 300.0
margin_bottom = 50.0
theme = ExtResource( 6 )
text = "DETAIL RULES"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="PopupDialog"]
margin_top = 50.0
margin_right = 300.0
margin_bottom = 250.0
theme = ExtResource( 6 )
text = " - No Castling move
- Pawns weren't promoted"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/DETAIL" to="." method="_on_DETAIL_pressed"]
[connection signal="pressed" from="VBoxContainer/PAWN" to="." method="_on_PAWN_pressed"]
[connection signal="pressed" from="VBoxContainer/KNIGHT" to="." method="_on_KNIGHT_pressed"]
[connection signal="pressed" from="VBoxContainer/BISHOP" to="." method="_on_BISHOP_pressed"]
[connection signal="pressed" from="VBoxContainer/ROOK" to="." method="_on_ROOK_pressed"]
[connection signal="pressed" from="VBoxContainer/QUEEN" to="." method="_on_QUEEN_pressed"]
[connection signal="pressed" from="VBoxContainer/KING" to="." method="_on_KING_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
